<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/salle1_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Salle1">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/battle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/fight_bg2"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNbPotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toStartOf="@+id/tvpseudo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="texte nb potion" />

        <ImageView
            android:id="@+id/ivperso"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/perso"
            tools:layout_editor_absoluteX="272dp"
            tools:layout_editor_absoluteY="666dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvPm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPv"
            tools:text="tvPm" />

        <TextView
            android:id="@+id/tvPv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvpseudo"
            tools:text="PV" />

        <TextView
            android:id="@+id/tvpseudo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="pseudo" />

        <Button
            android:id="@+id/btNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="360dp"
            android:text="@string/next"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.801"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWeaponMonstre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameMonstre"
            tools:text="arme monstre" />

        <TextView
            android:id="@+id/tvPvMonstre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="pv monstre" />

        <TextView
            android:id="@+id/tvNameMonstre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPvMonstre"
            tools:text="nom monstre" />

        <ImageView
            android:id="@+id/ivMonstre"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="132dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPvMonstre"
            app:srcCompat="@drawable/monstre" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/player"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/wall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <ToggleButton
            android:id="@+id/tbAxe"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/axebutton"
            android:scaleX="0.7"
            android:scaleY="0.8"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ibMA"
            app:layout_constraintStart_toEndOf="@+id/tbStaff"
            app:layout_constraintTop_toBottomOf="@+id/ibPa"
            tools:text="Axe" />

        <ImageButton
            android:id="@+id/ibMA"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/magic"
            android:contentDescription="@string/magical_attack"
            android:scaleType="fitXY"
            android:scaleY="0.9"
            app:layout_constraintBottom_toTopOf="@+id/tbAxe"
            app:layout_constraintEnd_toStartOf="@+id/ibPotion"
            app:layout_constraintStart_toEndOf="@+id/ibPa"
            app:layout_constraintTop_toBottomOf="@+id/tbSword"
            app:layout_constraintVertical_bias="0.505" />

        <ToggleButton
            android:id="@+id/tbSword"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/swordbutton"
            android:scaleX="0.7"
            android:scaleY="0.8"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toTopOf="@+id/ibPa"
            app:layout_constraintEnd_toStartOf="@+id/ibMA"
            app:layout_constraintStart_toEndOf="@+id/tbStaff"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/tbStaff"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/staffbutton"
            android:scaleX="0.8"
            android:scaleY="0.7"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toTopOf="@+id/tbAxe"
            app:layout_constraintEnd_toStartOf="@+id/ibPa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbSword"
            tools:text="staff" />

        <ImageButton
            android:id="@+id/ibPotion"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/health_potion"
            android:contentDescription="@string/potion"
            android:scaleType="fitXY"
            android:scaleY="0.9"
            android:src="@drawable/health_potion"
            app:layout_constraintBottom_toTopOf="@+id/tbAxe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ibMA"
            app:layout_constraintTop_toBottomOf="@+id/tbSword"
            app:layout_constraintVertical_bias="0.505"
            app:srcCompat="@drawable/health_potion" />

        <ImageButton
            android:id="@+id/ibPa"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/attack"
            android:contentDescription="@string/physical_attack"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/tbAxe"
            app:layout_constraintEnd_toStartOf="@+id/ibMA"
            app:layout_constraintStart_toEndOf="@+id/tbStaff"
            app:layout_constraintTop_toBottomOf="@+id/tbSword"
            app:srcCompat="@drawable/attack" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>